# unet_tensorrt

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/segment/: Segment.cpp  Segmenter.h
workspace/: config.ini
workspace/images/: 1.tif  2.tif  3.tif
workspace/models/: build.sh  seg_camera_128_txk.engine  seg_camera_128_txk.onnx  seg_camera_128_txk_gpu30.engine  seg_xray_96_96.engine  seg_xray_96_96_2.0.onnx  seg_xray_96_96_gpu30.engine
